--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ India."
 
             <div class="form-group  mt-3" id="we">
                 <label for="">Work Experience</label>
-                <textarea placeholder="enter here" class="form-control workField" rows="3" ></textarea>
+                <textarea placeholder="enter here" class="form-control workField " rows="3" ></textarea>
                 <div class="container text-center mt-2" id="weaddbtn">
                     <button onclick="addnewwork()" class="btn btn-primary btn-sm">Add</button>
                 </div>
@@ -112,14 +112,14 @@ India."
                         <h3>Objective</h3>
                         
                     </div>
-                    <p id="objT">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi incidunt optio rerum eaque ab? Provident, maxime commodi! Natus expedita in impedit id assumenda magnam sapiente quos ipsum error! Ab, laudantium!</p>
+                    <p class=" mt-3" id="objT">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi incidunt optio rerum eaque ab? Provident, maxime commodi! Natus expedita in impedit id assumenda magnam sapiente quos ipsum error! Ab, laudantium!</p>
                 </div>
 
                 <div class="card mt-4 ">
                     <div class="card-header">
                         <h3>Work Experience</h3>
                     </div>
-                    <ul id="weT">
+                    <ul class=" mt-3" id="weT">
                         <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, temporibus.</li>
                         <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, temporibus.</li>
                         <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, temporibus.</li>
@@ -130,7 +130,7 @@ India."
                     <div class="card-header">
                         <h3>Education Qualifications</h3>
                     </div>
-                    <ul id="eqT">
+                    <ul class=" mt-3" id="eqT">
                         <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, temporibus.</li>
                         <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, temporibus.</li>
                         <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem, temporibus.</li>
